--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,80 +1,58 @@
 {
-  "name" : " backend " ,
-  "versão" : " 1.0.0 " ,
-  "descrição" : " " ,
-  "main" : " index.js " ,
-  "roteiros" : {
-    "build" : " tsc " ,
-    "watch" : " tsc -w " ,
-    "start" : " nodemon dist/server.js " ,
-    "dev:server" : " ts-node-dev --respawn --transpile-only --ignore node_modules src/server.ts " ,
-    "pretest" : " NODE_ENV=teste sequelize db:migrate && NODE_ENV=teste sequelize db:seed:all " ,
-    "teste" : " NODE_ENV=test jest " ,
-    "posttest" : " NODE_ENV=test sequelize db:migrate:undo:all "
+  "name": "frontend",
+  "version": "0.1.0",
+  "versionSystem": "1.0.2",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.7",
+    "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
+    "emoji-mart": "^3.0.1",
+    "formik": "^2.2.0",
+    "i18next": "^19.8.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "markdown-to-jsx": "^7.1.0",
+    "material-ui-color": "^1.2.0",
+    "mic-recorder-to-mp3": "^2.2.2",
+    "moment": "^2.29.3",
+    "qrcode.react": "^1.0.0",
+    "react": "^16.13.1",
+    "react-color": "^2.19.3",
+    "react-dom": "^16.13.1",
+    "react-modal-image": "^2.5.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.9",
+    "recharts": "^2.0.2",
+    "socket.io-client": "^3.0.5",
+    "use-sound": "^2.0.1",
+    "yup": "^0.32.8"
   },
-  "autor" : " " ,
-  "licença" : " MIT " ,
-  "dependências" : {
-    "@sentry/node" : " ^5.29.2 " ,
-    "@types/pino" : " ^6.3.4 " ,
-    "bcryptjs" : " ^2.4.3 " ,
-    "cookie-parser" : " ^1.4.5 " ,
-    "cors" : " ^2.8.5 " ,
-    "date-fns" : " ^2.16.1 " ,
-    "dotenv" : " ^8.2.0 " ,
-    "expresso" : " ^4.17.1 " ,
-    "express-async-errors" : " ^3.1.1 " ,
-    "http-graceful-shutdown" : " ^2.3.2 " ,
-    "jsonwebtoken" : " ^8.5.1 " ,
-    "multer" : " ^1.4.2 " ,
-    "bigode" : " ^4.2.0 " ,
-    "mysql2" : " ^2.2.5 " ,
-    "pg" : " ^8.4.1 " ,
-    "pino" : " ^6.9.0 " ,
-    "pino-bonito" : " ^4.3.0 " ,
-    "qrcode-terminal" : " ^0.12.0 " ,
-    "reflect-metadata" : " ^0.1.13 " ,
-    "sequelizar" : " ^5.22.3 " ,
-    "sequelize-cli" : " ^5.5.1 " ,
-    "sequelize-typescript" : " ^1.1.0 " ,
-    "socket.io" : " ^3.0.5 " ,
-    "uuid" : " ^8.3.2 " ,
-    "whatsapp-web.js" : " ^1.17.0 " ,
-    "sim" : " ^0.32.8 "
+  "scripts": {
+    "start": "react-scripts start",
+    "legacy": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "devDependencies" : {
-    "@types/bcryptjs" : " ^2.4.2 " ,
-    "@types/bluebird" : " ^3.5.32 " ,
-    "@types/cookie-parser" : " ^1.4.2 " ,
-    "@types/cors" : " ^2.8.7 " ,
-    "@types/express" : " ^4.17.13 " ,
-    "@types/factory-girl" : " ^5.0.2 " ,
-    "@types/faker" : " ^5.1.3 " ,
-    "@types/jest" : " ^26.0.15 " ,
-    "@types/jsonwebtoken" : " ^8.5.0 " ,
-    "@types/multer" : " ^1.4.4 " ,
-    "@types/bigode" : " ^4.1.2 " ,
-    "@types/node" : " ^14.11.8 " ,
-    "@types/supertest" : " ^2.0.10 " ,
-    "@types/uuid" : " ^8.3.3 " ,
-    "@types/validator" : " ^13.1.0 " ,
-    "@types/yup" : " ^0.29.8 " ,
-    "@typescript-eslint/eslint-plugin" : " ^4.4.0 " ,
-    "@typescript-eslint/parser" : " ^4.4.0 " ,
-    "eslint" : " ^7.10.0 " ,
-    "eslint-config-airbnb-base" : " ^14.2.0 " ,
-    "eslint-config-prettier" : " ^6.12.0 " ,
-    "eslint-import-resolver-typescript" : " ^2.3.0 " ,
-    "eslint-plugin-import" : " ^2.22.1 " ,
-    "eslint-plugin-prettier" : " ^3.1.4 " ,
-    "fábrica-garota" : " ^5.0.4 " ,
-    "falsificador" : " ^5.1.0 " ,
-    "brincadeira" : " ^26.6.0 " ,
-    "nodemon" : " ^2.0.4 " ,
-    "bonito" : " ^2.1.2 " ,
-    "superteste" : " ^5.0.0 " ,
-    "ts-jest" : " ^26.4.1 " ,
-    "ts-node-dev" : " ^1.0.0-pre.63 " ,
-    "datilografado" : " 4.0.3 "
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
